Fixing problem caused by empty <DD></DD> When the DD was empty, the view collapsed and the next DT/DD overlapped the previous row. This is now fixed with a min-heigt for each DD.

--- a/ice/ice.css
+++ b/ice/ice.css
@@ -369,6 +369,7 @@ color: 		#003566;
 #content dd {
 	margin-top:		-17px;
 	font-size: 		12px;
+	min-height:		12px;
 	margin-left: 		230px;
 	padding-bottom:		5px;
 }
